k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  ports:
    - port: 9000
      name: api
      targetPort: 9000
    - port: 9001
      name: console
      targetPort: 9001
  selector:
    app: minio
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: minio-api
---
apiVersion: v1
kind: Service
metadata:
  name: flow
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: flow
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: auth
---
apiVersion: v1
kind: Service
metadata:
  name: flow-db
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: flow-db
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: frontend
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: nginx-gateway
